# color_analyzer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  app.yaml
server/: Cargo.toml  cloudbuild.yaml
server/src/: analyze.rs  colors.json  colors.rs  lib.rs  main.rs
server/static/: index.html  main.css  main.js
server/tests/: integration_tests.rs
src/: main.rs
