[package]
name = "color_analyzer"
version = "0.2.0"
authors = ["Tyler G <tyler@geerydev.com>"]

[dependencies]
base64 = "0.9.*"
image = "0.20.*"
multipart = "0.15.*"
reqwest = "0.9.*"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
features = ["json", "handlebars_templates"]

[[bin]]
name = "server"
path = "src/main.rs"
test = false
